...
            android:gravity="start"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_image" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#6feca4"
        android:textStyle="bold"
        android:textColor="@color/black"
...
